
*   Every component now provides the function `set_logger` to enable logging and instantiate a
    logger for `self.logger`

*   Now Pypet allows compression of HDF5 files, these can yield a massive reduction in
    memory space.

*   `tr`, `cr`, `current_run`, `param`, `dparam` are no longer supported as a shortcuts

*   __getitem__ is equivalent to __getattr__

pypet 0.1b.2

*   DefaultReplacementError is now called PresettingError

*   Now the runtime of single runs is measured and stored.

*   __getitem__ of the trajectory always returns the instance and fast access is not applied

*   PickleResult and PickleParameter support the choice of protocol

*   Explored Sparse matrices are stored under a slightly different name to disk.

*   BUG FIX: BFS works properly

*   BUG FIX: f_iter_runs is now affected if f_as_run is chosen

*   Annotations support __iter__

*   Annotations support __getitem__

*   BrianMonitorResult, the property and columne 'times' for the Spike and StateSpikeMonitor
    has been renamed 'spiketimes'.

*   Results support __iter__

*   BrianMonitorResult, the name of state variables in array mode
    is changed to varname+'_%Xd', instead of varname+'_idx%08d', and 'spiketimes_%08d' to
    'spiketimes_%Xd' and X is chosen in accordance with the number of neurons

*   BUG FIX: nested_equal now supports Object Tables containing numpy arrays

*   Better categorizations of the utility functions

*   Comments are no longer limited in size

*   New Brian Result

*   Storage Service in case of purging now sets the comment to the result with the lowest index,
    in case of multiprocessing.

*   Old API names are kept, but emit a depricated warning.

*   The exploration array is now termed range. Accordingly, the function `f_is_array` is
    renamed `f_has_range` and `f_get_array` renamed to `f_get_range`.

*   v_leaf renamed to v_is_leaf

*   f_is_root renamed to v_is_root and changed to property
