@@ -79,6 +79,8 @@ pypet 0.1b.3
 
 *   __getitem__ is equivalent to __getattr__
 
+*   Now can specify a maximum depth for accessing items
+
 pypet 0.1b.2
 
 *   DefaultReplacementError is now called PresettingError
